docs/tests/parser/expressions/invalid/ExprSafeMemMissingIdent.b
fn void test() {
    let int x = p.?;
}
